sdk/v0.5.27/bedrock.mdx
---
title: "bedrock"
icon: "square-m"
description: "<a href=\"https://github.com/pixeltable/pixeltable/blob/main/pixeltable/functions/bedrock.py#L0\" id=\"viewSource\" target=\"_blank\" rel=\"noopener noreferrer\"><img src=\"https://img.shields.io/badge/View%20Source%20on%20Github-blue?logo=github&labelColor=gray\" alt=\"View Source on GitHub\" style={{ display: 'inline', margin: '0px' }} noZoom /></a>"
noindex: true
---
# <span style={{ 'color': 'gray' }}>module</span>&nbsp; pixeltable.functions.bedrock


Pixeltable UDFs for AWS Bedrock AI models.

Provides integration with AWS Bedrock for accessing various foundation models
including Anthropic Claude, Amazon Titan, and other providers.


## <span style={{ 'color': 'gray' }}>func</span>&nbsp; invoke_tools()

```python Signature
invoke_tools(
    tools: pixeltable.func.tools.Tools,
    response: pixeltable.exprs.expr.Expr
) -> pixeltable.exprs.inline_expr.InlineDict
```

Converts an Anthropic response dict to Pixeltable tool invocation format and calls `tools._invoke()`.


## <span style={{ 'color': 'gray' }}>udf</span>&nbsp; converse()

```python Signature
@pxt.udf
converse(messages: pxt.Json[(Json, *, model_id: pxt.String, system: pxt.Json[(Json = None, inference_config: pxt.Json | None = None, additional_model_request_fields: pxt.Json | None = None, tool_config: pxt.Json[(Json = None) -> pxt.Json
```

Generate a conversation response.

Equivalent to the AWS Bedrock `converse` API endpoint.
For additional details, see:
[https://boto3.amazonaws.com/v1/documentation/api/latest/reference/services/bedrock-runtime/client/converse.html](https://boto3.amazonaws.com/v1/documentation/api/latest/reference/services/bedrock-runtime/client/converse.html)

__Requirements:__

- `pip install boto3`

**Parameters:**

- **`messages`** (`pxt.Json[(Json`): Input messages.
- **`model_id`** (`Any`): The model that will complete your prompt.
- **`system`** (`Any`): An optional system prompt.
- **`inference_config`** (`Any`): Base inference parameters to use.
- **`additional_model_request_fields`** (`Any`): Additional inference parameters to use.

**Returns:**

- `pxt.Json`: A dictionary containing the response and other metadata.

**Examples:**

Add a computed column that applies the model `anthropic.claude-3-haiku-20240307-v1:0` to an existing Pixeltable column `tbl.prompt` of the table `tbl`:
```python
msgs = [{'role': 'user', 'content': [{'text': tbl.prompt}]}]
tbl.add_computed_column(
    response=messages(
        msgs, model_id='anthropic.claude-3-haiku-20240307-v1:0'
    )
)
```


## <span style={{ 'color': 'gray' }}>udf</span>&nbsp; embed()

```python Signatures
# Signature 1:
@pxt.udf
embed(
    text: pxt.String,
    model_id: pxt.String,
    dimensions: pxt.Int | None
) -> pxt.Array[(None,), float32]

# Signature 2:
@pxt.udf
embed(
    image: pxt.Image,
    model_id: pxt.String,
    dimensions: pxt.Int | None
) -> pxt.Array[(None,), float32]
```

Generate embeddings using Amazon Titan or Nova embedding models.

Calls the AWS Bedrock `invoke_model` API for embedding models.
For additional details, see:
[https://docs.aws.amazon.com/bedrock/latest/userguide/titan-embedding-models.html](https://docs.aws.amazon.com/bedrock/latest/userguide/titan-embedding-models.html)
[https://docs.aws.amazon.com/nova/latest/userguide/modality-embedding.html](https://docs.aws.amazon.com/nova/latest/userguide/modality-embedding.html)

__Requirements:__

- `pip install boto3`

**Parameters:**

- **`text`** (`String`): Input text to embed.
- **`model_id`** (`String`): The embedding model identifier.
- **`dimensions`** (`Int | None`, default: `Literal(None)`): Output embedding dimensions. For Titan V2: 256, 512, 1024. For Nova: 256, 512, 1024, 3072.

**Returns:**

- `pxt.Array[(None,), float32]`: Embedding vector

**Examples:**

Create an embedding index on a column `description` with Nova embeddings and custom dimensions:
```python
tbl.add_embedding_index(
    tbl.description,
    string_embed=embed.using(
        model_id='amazon.nova-2-multimodal-embeddings-v1:0',
        dimensions=1024,
    ),
)
```


## <span style={{ 'color': 'gray' }}>udf</span>&nbsp; invoke_model()

```python Signature
@pxt.udf
invoke_model(
    body: pxt.Json,
    *,
    model_id: pxt.String,
    performance_config_latency: pxt.String | None = None,
    service_tier: pxt.String | None = None
) -> pxt.Json
```

Invoke a Bedrock model with a raw request body.

Equivalent to the AWS Bedrock `invoke_model` API endpoint.
For additional details, see:
[https://boto3.amazonaws.com/v1/documentation/api/latest/reference/services/bedrock-runtime/client/invoke_model.html](https://boto3.amazonaws.com/v1/documentation/api/latest/reference/services/bedrock-runtime/client/invoke_model.html)

__Requirements:__

- `pip install boto3`

**Parameters:**

- **`body`** (`pxt.Json`): The prompt and inference parameters as a dictionary.
- **`model_id`** (`pxt.String`): The model identifier to invoke.
- **`performance_config_latency`** (`pxt.String | None`): Performance setting.
- **`service_tier`** (`pxt.String | None`): processing tier.

**Returns:**

- `pxt.Json`: A dictionary containing the model response.

**Examples:**

Add a computed column using Amazon Titan embedding model:
```python
body = {'inputText': tbl.text, 'dimensions': 512, 'normalize': True}
tbl.add_computed_column(
    response=invoke_model(body, model_id='amazon.titan-embed-text-v2:0')
)
```

